Aligned the boxes correctly! :)

--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ button
     background: plum;
     border: 4px solid indigo;
     display: flex;
-    flex-direction: column;
 }
 
 .item_for_container
@@ -83,7 +82,6 @@ button
     height: 60px;
     border: 4px solid darkslategray;
     background: skyblue;
-    flex-direction: column;
 }
 
 .flex-container2 div
